<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout


            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout

                android:layout_marginLeft="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/ambulance_red_gri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnAmbulance"
                    android:id="@+id/ambulance"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_margin="18dp" />

                <Button
                    android:paddingLeft="20dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/police_red_gri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnPolice"
                    android:onClick="police"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/police" />
            </LinearLayout>



            <LinearLayout
                android:layout_marginLeft="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button

                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/gas_red_gri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnGas"
                    android:onClick="gasLeak"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/gas" />


                <Button
                    android:paddingLeft="20dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/fire_department_red_geri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnFire"
                    android:onClick="fire"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/fire" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginLeft="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/road_assistance_red_gri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnRoadAsistance"
                    android:textColor="@android:color/holo_red_dark"
                    android:onClick="roadAsisstance"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/road" />

                <Button
                    android:paddingLeft="20dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/electrict_gri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnElectrict"
                    android:onClick="electrict"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/elektrik" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginLeft="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/soldier_red_gri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnSoilder"
                    android:textColor="@android:color/holo_red_dark"
                    android:onClick="soldier"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/soldier" />

                <Button
                    android:paddingLeft="20dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/traffic_police_red_gri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnTraffict"
                    android:onClick="traffict"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/traffict" />


            </LinearLayout>


            <LinearLayout
                android:layout_marginLeft="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/belediye_red_gri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnBelediye"
                    android:textColor="@android:color/holo_red_dark"
                    android:onClick="soldier"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/belediye" />

                <Button
                    android:paddingLeft="20dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/forest_fire_red_gri"
                    android:layout_width="wrap_content"
                    android:text="@string/btnOrman"
                    android:onClick="Orman"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_margin="18dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/orman" />


            </LinearLayout>




        </LinearLayout>

    </ScrollView>
</RelativeLayout>